--- a/scr/fonts.qrc
+++ b/scr/fonts.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="Font">
+  <qresource prefix="fon">
     <file>font/discoduck.ttf</file>
     <file>font/Roboto.ttf</file>
     <file>font/Roboto-Italic.ttf</file>
