--- a/gui/result.ui
+++ b/gui/result.ui
@@ -11,7 +11,12 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Result</string>
+   <string>Rock Paper Scissors</string>
+  </property>
+  <property name="windowIcon">
+   <iconset theme="applications-games">
+    <selectedon>:/icon/icon/smile.ico</selectedon>
+   </iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:1, stop:0 rgba(148, 237, 253, 255), stop:0.142045 rgba(166, 241, 253, 255), stop:0.346369 rgba(177, 200, 250, 255), stop:0.517045 rgba(218, 170, 244, 255), stop:0.793041 rgba(249, 132, 246, 255), stop:0.991905 rgba(246, 142, 228, 255));
@@ -62,6 +67,9 @@ color: rgb(99, 27, 62);</string>
      <height>61</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>PointingHandCursor</cursorShape>
+   </property>
    <property name="styleSheet">
     <string notr="true">
 QPushButton{
@@ -88,6 +96,9 @@ font:24pt;
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../scr/res.qrc"/>
+  <include location="../scr/fonts.qrc"/>
+ </resources>
  <connections/>
 </ui>
