--- a/gui/second_window.ui
+++ b/gui/second_window.ui
@@ -14,7 +14,12 @@
    <cursorShape>ArrowCursor</cursorShape>
   </property>
   <property name="windowTitle">
-   <string>Game</string>
+   <string>Rock Paper Scissors</string>
+  </property>
+  <property name="windowIcon">
+   <iconset theme="applications-games">
+    <selectedon>:/icon/icon/smile.ico</selectedon>
+   </iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:1, y2:1, stop:0 rgba(148, 237, 253, 255), stop:0.142045 rgba(166, 241, 253, 255), stop:0.346369 rgba(177, 200, 250, 255), stop:0.517045 rgba(218, 170, 244, 255), stop:0.793041 rgba(249, 132, 246, 255), stop:0.991905 rgba(246, 142, 228, 255));
@@ -36,66 +41,6 @@ cursor: Hotline Black Normal Select</string>
     </property>
     <property name="text">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;Player&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="music_start">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>23</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QPushButton{
-	color: rgb(22, 158, 67);
-background-color: rgba(255,255,255,5);
-border: 1px solid rgba(255,255,255,5);
-border-radius: 7px;
-width: 230px;
-height: 50px;
-font:30pt;
-}
-QPushButton:hover{
-background-color: rgba(255, 225, 225,80);
-font:25pt;
-}
-QPushButton:pressed{
-background-color: rgba(255,255,255,150);
-font:24pt;
-}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../scr/icon/play.svg</normaloff>../scr/icon/play.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>25</width>
-      <height>25</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QLabel" name="music_title">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>0</y>
-      <width>75</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background:transparent;
-font: 16pt;</string>
-    </property>
-    <property name="text">
-     <string>Music</string>
     </property>
    </widget>
    <widget class="QLabel" name="computer_title">
@@ -126,6 +71,9 @@ font: 16pt;</string>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="rock_button">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{
 background-color: rgba(255,255,255,2);
@@ -152,6 +100,9 @@ font:14pt;
      </item>
      <item>
       <widget class="QPushButton" name="scissors_button">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{
 background-color: rgba(255,255,255,2);
@@ -178,6 +129,9 @@ font:14pt;
      </item>
      <item>
       <widget class="QPushButton" name="paper_button">
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
        <property name="styleSheet">
         <string notr="true">QPushButton{
 background-color: rgba(255,255,255,2);
@@ -212,6 +166,9 @@ font:14pt;
       <width>20</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="acceptDrops">
      <bool>false</bool>
@@ -336,11 +293,33 @@ align: center;</string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="mode">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Disco Duck</family>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: transparent;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources>
   <include location="../scr/res.qrc"/>
-  <include location="../scr/cursor.qrc"/>
+  <include location="../scr/fonts.qrc"/>
  </resources>
  <connections/>
 </ui>
